# raytracer

./: .clang-format  CMakeLists.txt  install_deps.sh  main.cpp
src/Math/: Concepts.hpp  ConstexprFunctions.hpp  Vector.cpp  Vector.hpp
src/Ray/: RayCaster.hpp
src/Scene/: AABoundingBox.cpp  AABoundingBox.hpp  Camera.cpp  Camera.hpp  Ray.hpp  Scene.cpp  Scene.hpp
src/Scene/Material/: Dielectric.hpp  DiffuseLight.hpp  Lambertian.hpp  Material.hpp  Metal.hpp
src/Scene/Object/: AARect.cpp  AARect.hpp  BVHNode.cpp  BVHNode.hpp  Box.hpp  Object.cpp  Object.hpp  Rotated.cpp  Rotated.hpp  Sphere.cpp  Sphere.hpp
src/Scene/Texture/: Checker.hpp  Image.cpp  Image.hpp  Noise.hpp  Texture.hpp
src/Util/: Color.hpp  Common.hpp  Image.cpp  Image.hpp  Perlin.hpp  Random.cpp  Random.hpp
